--- a/Booking-Service/src/main/resources/application.yaml
+++ b/Booking-Service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 8001
 
 spring:
   application:
@@ -11,13 +11,13 @@ spring:
 
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/airline_reservation_db
-    username: tuan
-    password: 20226100
+    url: ${POSTGRESQL_URL:}
+    username: ${POSTGRESQL_USERNAME:}
+    password: ${POSTGRESQL_PASSWORD:}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -27,6 +27,11 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+#      group-id: booking-group
+      enable-auto-commit: true
+      properties:
+        spring.json.trusted.packages: "*"
 
 
 
