--- a/Payment-Service/package.json
+++ b/Payment-Service/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "npm run dev",
+    "dev": "ts-node -r dotenv/config src/main/main.ts",
+    "dev:watch": "ts-node-dev -r dotenv/config --respawn --transpile-only src/main/main.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
@@ -19,16 +20,15 @@
     "typescript",
     "kafka"
   ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
+    "reflect-metadata": "^0.2.2",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.20.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
