--- a/Payment-Service/tsconfig.json
+++ b/Payment-Service/tsconfig.json
@@ -16,18 +16,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@/config/*": ["src/main/config/*"],
-      "@/controllers/*": ["src/main/controllers/*"],
-      "@/services/*": ["src/main/services/*"],
-      "@/models/*": ["src/main/models/*"],
-      "@/middleware/*": ["src/main/middleware/*"],
-      "@/utils/*": ["src/main/utils/*"],
-      "@/types/*": ["src/main/types/*"]
-    }
+    "baseUrl": "./src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
